module_7/exercise/cert/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: exercise-cert-echo-service
spec:
  selector:
    app: exercise-cert-echo
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-cert-echo
spec:
  selector:
    matchLabels:
      app: exercise-cert-echo
  template:
    metadata:
      labels:
        app: exercise-cert-echo
    spec:
      containers:
      - name: exercise-cert-echo
        image: gcr.io/google_containers/echoserver:1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exercise-cert
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - localhost
      secretName: tls-localhost
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: exercise-cert-echo-service
              servicePort: 8080
